--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-// name: Deploy Docs to GitHub Pages
+name: Deploy Docs to GitHub Pages
 
 on:
   push:
@@ -18,4 +18,3 @@ jobs:
         env:
           GIT_USER: ckersey2
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
