fix(ci): configure Git identity and auth for Docusaurus deployment
- Set explicit git user.name and user.email to fix commit author error in GitHub Actions
- Pass GITHUB_TOKEN securely via environment to enable deployment to gh-pages branch
- Set USE_SSH=false to force HTTPS-based auth for Docusaurus deploy
- Prevent fatal: could not read password error due to malformed remote URL
- Silences trailingSlash warning by recommending config change

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Docs to GitHub Pages
+name: Deploy Docs
 
 on:
   push:
@@ -12,9 +12,15 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18
+
+      - name: Configure Git identity
+        run: |
+          git config --global user.name "ckersey2 Bot"
+          git config --global user.email "docs@ckersey2.dev"
+
       - run: yarn install
-      - run: yarn build
       - run: yarn deploy
         env:
           GIT_USER: ckersey2
+          USE_SSH: false
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
