--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "docusaurus start",
     "build": "docusaurus build",
-    "deploy": "docusaurus deploy"
+    "deploy": "GIT_USER=ckersey2 git config --global user.email 'docs@ckersey2.dev' && git config --global user.name 'ckersey2 Bot' && docusaurus deploy"
   },
   "dependencies": {
     "@docusaurus/core": "^3.3.1",
