--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,12 @@
 {
-    "compilerOptions": {
-      "target": "ES2020",
-      "module": "ESNext",
-      "moduleResolution": "Node",
-      "strict": true,
-      "esModuleInterop": true,
-      "types": ["node"],
-      "skipLibCheck": true
-    },
-    "include": ["docs", "src", "docusaurus.config.js", "sidebars.js"]
-  }
-  
+  "compilerOptions": {
+    "target": "ES2020",
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "types": ["node"],
+    "checkJs": true,
+    "allowJs": true,
+    "noEmit": true
+  },
+  "include": ["docusaurus.config.js", "sidebars.js"]
+}
