--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "slack-canvas-docs-site",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "start": "docusaurus start",
-    "build": "docusaurus build",
-    "deploy": "GIT_USER=ckersey2 git config --global user.email 'docs@ckersey2.dev' && git config --global user.name 'ckersey2 Bot' && docusaurus deploy"
-  },
-  "dependencies": {
-    "@docusaurus/core": "^3.3.1",
-    "@docusaurus/preset-classic": "^3.3.1",
-    "clsx": "^2.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
-  "devDependencies": {
-    "@types/node": "^22.14.1"
-  }
+	"name": "slack-canvas-docs-site",
+	"version": "1.0.0",
+	"private": true,
+	"scripts": {
+		"start": "docusaurus start",
+		"build": "docusaurus build",
+		"deploy": "docusaurus deploy"
+	},
+	"dependencies": {
+		"@docusaurus/core": "^3.3.1",
+		"@docusaurus/preset-classic": "^3.3.1",
+		"clsx": "^2.0.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0"
+	},
+	"packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
+	"devDependencies": {
+		"@types/node": "^22.14.1"
+	}
 }
